Update 'nrxz00w9g-java-springboot' component image to: quay.io/rhtap_qe/rhtap-qe-java-springboot:07fd68a4c963ecde084ead506ccb8e99f188ddef@sha256:4dc4be009270a979cd043586ffd3f7b7428d29bb2dc9c62ebac342b1d90d6d7c

--- a/components/nrxz00w9g-java-springboot/overlays/development/deployment-patch.yaml
+++ b/components/nrxz00w9g-java-springboot/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: nrxz00w9g-java-springboot
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-java-springboot:07fd68a4c963ecde084ead506ccb8e99f188ddef@sha256:4dc4be009270a979cd043586ffd3f7b7428d29bb2dc9c62ebac342b1d90d6d7c
+          name: container-image
